--- a/week-3/01-middlewares/package.json
+++ b/week-3/01-middlewares/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "jest": "^29.7.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "xod": "^1.11.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
